# python-project-lvl3

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: hexlet-check.yml  python-ci.yml
page_loader/: __init__.py  cli.py  core.py  errors.py  exceptions.py  file_manager.py  file_system.py  loader.py  logger_agent.py  network.py  request_manager.py
page_loader/scripts/: page_loader.py
tests/: components_tests.py  configurator.py  exception_tests.py  loader_tests.py  test_components.py  test_exception.py  test_exceptions.py  test_loader.py  tests.py
tests/fixtures/: tmp2b94k_3vru-hexlet-io-projects-51-members-14466?step=1&item=2.html  tmp30m2b_0_ru-hexlet-io-projects-51-members-14466?step=1&item=2.html  tmpheokday3ru-hexlet-io-courses.html  tmpp4p7zyz3ru-hexlet-io-courses.html
tests/fixtures/demo_page/in/: example.ru  (+1 more)
tests/fixtures/tmp2b94k_3vru-hexlet-io-projects-51-members-14466?step=1&item=2_files/: ru-hexlet-io-u-new
tests/fixtures/tmp30m2b_0_ru-hexlet-io-projects-51-members-14466?step=1&item=2_files/: ru-hexlet-io-u-new
tests/fixtures/tmp4_ji2ma9ru-hexlet-io-projects-51-members-14466?step=1&item=2_files/: ru-hexlet-io-u-new
tests/fixtures/tmpa4l97kuwru-hexlet-io-courses_files/: ru-hexlet-io-courses
tests/fixtures/tmpheokday3ru-hexlet-io-courses_files/: ru-hexlet-io-courses
tests/fixtures/tmpli4x7ir0ru-hexlet-io-projects-51-members-14466?step=1&item=2_files/: ru-hexlet-io-u-new
tests/fixtures/tmpmjkzlbcnru-hexlet-io-courses_files/: ru-hexlet-io-courses
tests/fixtures/tmpp4p7zyz3ru-hexlet-io-courses_files/: ru-hexlet-io-courses
(+1 files in other folders)
