[tool.poetry]
name = "hexlet-code"
version = "0.2.4"
description = ""
authors = ["Konstantin Freidlin <freidlinks@ya.ru>"]
packages = [
    { include = "page_loader" }
]
repository = "https://github.com/mnogom/python-project-lvl3"
classifiers = [
    "Topic :: Education",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"
progress = "^1.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-coverage = "^0.0"
requests-mock = "^1.8.0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"

# Add test repository source
[[tool.poetry.source]]
name = "testPypi"
url = "https://test.pypi.org/legacy/"
secondary = true
